--- a/index.html
+++ b/index.html
@@ -24,23 +24,26 @@
 <h2>Work Experience</h2>
 <ul>
     <li><h3>Consultant - IMS Health (IQVIA)</h3></li>
+    <p>March 2008 - December 2010</p>
+    <ul>
+        <li>Primary research in the form of key opinion leaders' interviews</li>
+        <li>Reviewed interview transcripts and created PowerPoint deck</li>
+        <li>Updated study guide in support of primary research</li>
+    </ul>
+
 </ul>
-<ul><p>March 2008 - December 2010</p></ul>
-<ul>
-    <li>Primary research in the form of key opinion leaders' interviews</li>
-    <li>Reviewed interview transcripts and created PowerPoint deck</li>
-    <li>Updated study guide in support of primary research</li>
-</ul>
+
 <ul>
 <li><h3>Research Associate - Decision Resources Group (Clarivate)</h3></li>
-</ul>
-<ul><p>September 2001 - February 2008</p></ul>
-<ul>
-    <li>Primary and secondary research and report writing</li>
-    <li>Data gathering and analysis</li>
-    <li>Conducted opportunity assessment in various Oncology indications</li>
+<p>September 2001 - February 2008</p>
+    <ul>
+        <li>Primary and secondary research and report writing</li>
+        <li>Data gathering and analysis</li>
+        <li>Conducted opportunity assessment in various Oncology indications</li>
+    </ul>    
 </ul>
 <hr/>
+    
 <h2>Skills</h2>
 <ul>
     <li>Creativity and Communication</li>
